--- a/proxmoxbackupclient.example.ini
+++ b/proxmoxbackupclient.example.ini
@@ -3,3 +3,5 @@ PBS_REPOSITORY = backups@pbs@pbs.example.com:backups
 PBS_PASSWORD = supersecurepassword
 [paths]
 backupclient = /usr/bin/proxmox-backup-client
+; delete or leave empty if you don't have any namespaces - root level is always checked
+namespaces = namespace1, namespace2 
