feat: add option to group into single service
Each backup on the server uses one service in checkmk. With the new option all backups can be grouped into a single service.

--- a/proxmoxbackupclient.example.ini
+++ b/proxmoxbackupclient.example.ini
@@ -5,3 +5,7 @@ PBS_PASSWORD = supersecurepassword
 backupclient = /usr/bin/proxmox-backup-client
 ; delete or leave empty if you don't have any namespaces - root level is always checked
 namespaces = namespace1, namespace2 
+
+[formatting]
+; services can be "singled" or "grouped" - single will present one service per backup, grouped means one for all backups
+services = singled
